# topicos-ia-2024-2do-parcial

./: .gitignore  README.md  pyproject.toml  trip.json
ai_assistant/: agent.py  api.py  chatbot.py  config.py  models.py  prompts.py  rags.py  tools.py  utils.py
